--- a/src/assets/pages/violencia.html
+++ b/src/assets/pages/violencia.html
@@ -21,7 +21,7 @@
             <h2>Sua voz pode salvar vidas.</h2>
         </header>
         <p>
-            Em apoio à campanha **Agosto Lilás**, o SafeSpeak oferece um canal direto e seguro para denúncias de violência contra a mulher. Seu relato será encaminhado de forma anônima ao Disque 181, garantindo total privacidade.
+            Em apoio à campanha <strong>Agosto Lilás</strong>, o SafeSpeak oferece um canal direto e seguro para denúncias de violência contra a mulher. Seu relato será encaminhado de forma anônima ao Disque 181, garantindo total privacidade.
         </p>
         <div class="form-section">
             <textarea id="denunciaTexto" placeholder="Descreva a denúncia aqui..."></textarea>
@@ -34,3 +34,4 @@
 </body>
 
 </html>
+
