--- a/src/assets/pages/sobre.html
+++ b/src/assets/pages/sobre.html
@@ -21,7 +21,7 @@
         </header>
         <div class="about-content">
             <p>
-                O **SafeSpeak** nasceu de um projeto com o objetivo de inovar a forma como as denúncias são feitas. Acreditamos que o anonimato é crucial para encorajar as pessoas a denunciarem, e por isso desenvolvemos esta ferramenta que transforma textos em áudios para ligações seguras.
+                O <strong>SafeSpeak</strong> nasceu de um projeto com o objetivo de inovar a forma como as denúncias são feitas. Acreditamos que o anonimato é crucial para encorajar as pessoas a denunciarem, e por isso desenvolvemos esta ferramenta que transforma textos em áudios para ligações seguras.
             </p>
             <p>
                 Nossa missão é dar voz a quem precisa, oferecendo uma ponte discreta e tecnológica para os serviços de denúncia.
@@ -29,13 +29,15 @@
             <h2>Equipe de Desenvolvimento</h2>
             <div class="team-list">
                 <ul>
-                    <li><i class="fas fa-user"></i> [Nome do Membro 1]</li>
-                    <li><i class="fas fa-user"></i> [Nome do Membro 2]</li>
-                    <li><i class="fas fa-user"></i> [Nome do Membro 3]</li>
+                    <li><i class="fas fa-user"></i> Gabriel</li>
+                    <li><i class="fas fa-user"></i> Rodrigo</li>
+                    <li><i class="fas fa-user"></i> Ryan</li>
+                    <li><i class="fas fa-user"></i> Rodrigo</li>
                 </ul>
             </div>
         </div>
     </div>
     <script src="../../scripts/pages/sobre.js"></script>
 </body>
+
 </html>
