--- a/Denuncia/denuncia-geral.html
+++ b/Denuncia/denuncia-geral.html
@@ -17,7 +17,7 @@
     <main class="main-content">
         <div class="content-box">
             <h2>Faça sua Denúncia Geral</h2>
-            <p>Utilize o campo abaixo para descrever a situação. Forneça o máximo de detalhes possível. Sua denúncia pode ser anônima.</p>
+            <p>Utilize o campo abaixo para descrever a situação. Forneça o máximo de detalhes possível. Sua denúncia é anônima.</p>
             <textarea id="denunciaText" placeholder="Descreva sua denúncia aqui..."></textarea>
             <button id="submitBtn" class="submit-btn">Enviar Denúncia</button>
         </div>
@@ -81,4 +81,5 @@
         });
     </script>
 </body>
+
 </html>
