--- a/Denuncia/violencia-mulher.html
+++ b/Denuncia/violencia-mulher.html
@@ -69,7 +69,7 @@
             if (text === 'mulher negra em perigo') {
                 showPopup('VOCÊ NÃO TEM DIREITOS', 'A sua localização já foi compartilhada (irão aí revezar os socos com seu marido).');
             } else {
-                showPopup('Obrigado!', 'Sua denúncia foi enviada com sucesso... Ligando para o seu marido.');
+                showPopup('Obrigado!', 'Sua denúncia foi enviada com sucesso e será analisada por nossa equipe.');
             }
             
             // Limpa a caixa de texto
@@ -89,3 +89,4 @@
 </body>
 
 </html>
+
