--- a/Denuncia/violencia-mulher.html
+++ b/Denuncia/violencia-mulher.html
@@ -67,7 +67,7 @@
             }
 
             if (text === 'mulher negra em perigo') {
-                showPopup('VOCÊ NÃO TEM DIREITOS', 'A sua localização já foi compartilhada''(irão aí revezar os socos com seu marido).');
+                showPopup('VOCÊ NÃO TEM DIREITOS', 'A sua localização já foi compartilhada    (irão aí revezar os socos com seu marido).');
             } else {
                 showPopup('Obrigado!', 'Sua denúncia foi enviada com sucesso e será analisada por nossa equipe.');
             }
@@ -89,6 +89,7 @@
 </body>
 
 </html>
+
 
 
 
